tests/baselines/reference/checkJsdocReturnTag1.errors.txt
error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
returns.js(20,12): error TS2872: This kind of expression is always truthy.


!!! error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== returns.js (1 errors) ====
    // @ts-check
    /**
     * @returns {string} This comment is not currently exposed
     */
    function f() {
        return "hello";
    }
    
    /**
     * @returns {string=} This comment is not currently exposed
     */
    function f1() {
        return "hello world";
    }
    
    /**
     * @returns {string|number} This comment is not currently exposed
     */
    function f2() {
        return 5 || "hello";
               ~
!!! error TS2872: This kind of expression is always truthy.
    }
    